fix (homepage): horizontal overflows

--- a/client/src/assets/scss/common.scss
+++ b/client/src/assets/scss/common.scss
@@ -4,6 +4,8 @@
 
 * {
     box-sizing: border-box !important;
+    margin: 0;
+    padding: 0;
 }
 
 html {
